[package]
name = "superliquid"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
bincode = "1.3"
ed25519 = "2.2.3"
rand_core = "0.6"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8"
dotenv = "0.15.0"
hex = "0.4.3"
futures = "0.3.31"
chrono = "0.4"
colored = "2"


[profile.release]
debug = true